--- a/Recto_Nerine_Rosette_HCI_Midterms/index.html
+++ b/Recto_Nerine_Rosette_HCI_Midterms/index.html
@@ -18,18 +18,17 @@
 
         <div class="feature-grid">
             <article class="feature-card">
-                <h3>Accessibility Best Practices</h3>
+                <h3>Accessibility Features</h3>
                 <ul>
                     <li>High contrast color schemes</li>
                     <li>Clear typography and spacing</li>
-                    <li>Keyboard navigation support</li>
                     <li>Screen reader compatibility</li>
                     <li>Audio feedback integration</li>
                 </ul>
             </article>
 
             <article class="feature-card">
-                <h3>Testing & Simulation Tools</h3>
+                <h3>Simulation Features</h3>
                 <ul>
                     <li>Screen reader simulation</li>
                     <li>Contrast checkers</li>
